DBZ-422 Using existing constants BigDecimal.ONE and ZERO;
Also using valueOf() methods to benefit from internal caching for most numeric types